--- a/css/style.scss
+++ b/css/style.scss
@@ -167,6 +167,52 @@ section {
   border-radius: 1em;
   margin-bottom: 2em;
 }
+.hire {
+  font-size: 22px;
+  p {
+    font-weight: 500;
+  }
+  span {
+    color: #6700ee;
+
+    font-weight: 500;
+  }
+}
+
+.footer {
+  background: #6700ee;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0px auto;
+
+    padding: 0px 30px 0px 30px;
+
+    width: 100%;
+    margin: 0 auto;
+    .logo {
+      color: #00f7ff;
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
+
+    ul {
+      display: flex;
+      li a {
+        margin: 8px;
+        color: white;
+      }
+    }
+  }
+}
 
 @media only screen and (min-width: 800px) {
   .featured,
@@ -275,6 +321,12 @@ section {
       margin-top: 15%;
       width: 100%;
     }
+
+    .footer {
+      div {
+        flex-direction: row;
+      }
+    }
   }
 
   .portfolio img {
@@ -304,6 +356,18 @@ section {
   .hero .content {
     padding: 6em 8em 6em 10em;
   }
+  .footer {
+    div {
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      .logo {
+        margin: 0;
+        margin-right: 10px;
+      }
+    }
+  }
 }
 
 @media only screen and (min-width: 1550px) {
@@ -325,5 +389,8 @@ section {
 
   .hero .content {
     padding: 9em 20em 6em 20em;
+  }
+  .hire {
+    font-size: 28px;
   }
 }
